# newline_normalizer

./: Cargo.toml  README.md
benches/: to_dos.rs  to_unix.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: to_dos_newlines.rs  to_unix_newlines.rs
src/: lib.rs
