[package]
name = "newline_normalizer"
description = "Zero-copy newline normalization to \\n or \\r\\n with SIMD acceleration."
version = "0.1.3"
authors = ["Nikita Madebeykin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/digitalcortex/newline_normalizer"
rust-version = "1.61"
keywords = ["newline", "normalize", "unix", "windows", "text"]
categories = ["text-processing"]
exclude = ["/benches"]
readme = "README.md"

[dependencies]
memchr = "2.7.4"

[dev-dependencies]
criterion = "0.5.1"
loe = "0.3.0"
newline-converter = "0.3.0"
once_cell = "1.20.3"
regex = "1.9.6"

[[bench]]
name = "to_unix"
harness = false

[[bench]]
name = "to_dos"
harness = false
