[package]
name = "newline_normalizer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.newline_normalizer]
path = ".."

[[bin]]
name = "to_unix_newlines"
path = "fuzz_targets/to_unix_newlines.rs"
test = false
doc = false
bench = false

[[bin]]
name = "to_dos_newlines"
path = "fuzz_targets/to_dos_newlines.rs"
test = false
doc = false
bench = false
